[project]
name = "analysis-nb"
version = "0.1.0"
description = "Binder for Jupyter notebooks to analyze data and create visualizations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
]
